Able to CRUD users

--- a/public/app/report/fuel_consumption.html
+++ b/public/app/report/fuel_consumption.html
@@ -90,10 +90,15 @@
             </div>
         </div>
     </div>
+    																	
     <div class="container">
-        <canvas id="line" class="chart chart-line" chart-data="vm.data"
-            chart-labels="vm.labels" chart-legend="true" chart-series="vm.series"
-            chart-click="onClick" >
-        </canvas> 
+        <div id="chartdiv"></div>
     </div>
 </div>
+
+<style>
+    #chartdiv {
+	width	: 100%;
+	height	: 500px;
+}																	</style>
+    
