--- a/public/app/admin/users.html
+++ b/public/app/admin/users.html
@@ -14,25 +14,27 @@
                         <thead>
                             <tr>
                                 <th data-field="">Select</th>
+                                <th data-field="u_id">User ID</th>
                                 <th data-field="sku">Username</th>
                                 <th data-field="image">Email</th>
                                 <th data-field="name">Role</th>
-                                <th data-field="status">Status</th>
+                                <!--<th data-field="status">Status</th>-->
                                 <th data-field="">Action</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr ng-repeat="user in vm.users">
+                            <tr ng-repeat="user in vm.users.data">
                                 <th>
-                                    <input type="checkbox" id="{{user._id}}"/>
-                                    <label for="{{user._id}}"></label>
+                                    <input type="checkbox" id="{{user.userID}}"/>
+                                    <label for="{{user.userID}}"></label>
                                 </th>
-                                <th>{{user.username}}</th>
+                                <th>{{user.userID}}</th>
+                                <th>{{user.userName}}</th>
                                 <td>{{user.email}}</td>
-                                <td>{{user.role}}</td>
-                                <td>{{user.status}}</td>
+                                <td>{{user.canmanagechild}}</td>
+                                <!--<td>{{user.status}}</td>-->
                                 <td>
-                                    <a class="btn z-depth-0 blue lighten-1" ng-click="vm.product_view(product,product_detail)">
+                                    <a class="btn z-depth-0 blue lighten-1" ng-click="vm.user_view_modal(user)">
                                         <i class="fa fa-edit"></i>
                                     </a>
                                 </td>
@@ -62,31 +64,70 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col l6 s12 input-field">
+                <div class="col l12 s12 input-field">
                     <input id="new-your-password" type="password" ng-model="vm.user.password">
                     <label for="new-your-password">Pick a password</label>
-                </div>
-                <div class="col l6 s12 input-field">
-                    <input id="new-your-password" type="password" ng-model="vm.user.confirm_password">
-                    <label for="new-your-password">Confirm your a password</label>
                 </div>
             </div>
             <div class="row">
                 <div class="col l6 s12 input-field">
-                    <select class="browser-default" ng-model="vm.user.role">
+                    <input id="new-your-tel" type="text" ng-model="vm.user.tel">
+                    <label for="new-your-tel">Your telephone number</label>
+                </div>
+                <div class="col l6 s12 input-field">
+                    <select class="browser-default" ng-model="vm.user.canmanagechild">
                         <option value="" disabled selected>Choose a role</option>
                         <option value="1">Administrator</option>
                         <option value="2">Cooperate User</option>
                         <option value="3">General User</option>
                     </select>
                 </div>
+            </div>
+            <div class="row center">
+                <button class="btn" ng-click="vm.register('add')">Create Account</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="user_edit_modal" class="modal">
+    <div class="modal-content">
+        <div>
+            <div class="center">
+                <p class="flow-text">Edit account</p>
+            </div>
+            <div class="row">
                 <div class="col l6 s12 input-field">
-                    <input id="note" type="password" ng-model="vm.user.note">
-                    <label for="note">Note</label>
+                    <input id="new-username" type="text" disabled ng-model="vm.user_edit.userName">
+                    <label for="new-username" class="active">Your username</label>
+                </div>
+                <div class="col l6 s12 input-field">
+                    <input id="new-your-email" type="text" ng-model="vm.user_edit.email">
+                    <label for="new-your-email" class="active">Your email address</label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col l12 s12 input-field">
+                    <input id="new-your-password" type="password" ng-model="vm.user_edit.password">
+                    <label for="new-your-password" class="active">Pick a password</label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col l6 s12 input-field">
+                    <input id="new-your-tel" type="text" ng-model="vm.user_edit.tel">
+                    <label for="new-your-tel" class="active">Your telephone number</label>
+                </div>
+                <div class="col l6 s12 input-field">
+                    <select class="browser-default" ng-model="vm.user_edit.canmanagechild">
+                        <option value="1" ng-selected="vm.user_edit.canmanagechild === 1">1</option>
+                        <option value="2" ng-selected="vm.user_edit.canmanagechild === 2">2</option>
+                        <option value="3" ng-selected="vm.user_edit.canmanagechild === 3">3</option>
+                    </select>
                 </div>
             </div>
             <div class="row center">
-                <button class="btn" ng-click="vm.register()">Create Account</button>
+                <button class="btn" ng-click="vm.register('edit')">Update Account</button>
+                <button class="btn" ng-click="vm.user_delete(vm.user_edit.userName)">Delete Account</button>
             </div>
         </div>
     </div>
