--- a/public/index.html
+++ b/public/index.html
@@ -95,6 +95,8 @@
         <script src="app/admin/users.js"></script>
         <script src="app/admin/location.js"></script>
         <script src="app/admin/refuel.js"></script>
+        <script src="app/admin/groups.js"></script>
+        <script src="app/admin/vehicles.js"></script>
         <script src="app/shared/user.js"></script>
         <script src="app/shared/authentication.js"></script>
         <script src="app/shared/group_car_load.js"></script>
