Able to add group to user

--- a/public/app/admin/home.html
+++ b/public/app/admin/home.html
@@ -1,10 +1,10 @@
 <div class="admin">
     <ul id="slide-out" class="side-nav fixed admin_side_nav">
-        <li><a ui-sref=".refuel">Refuel Cost</a></li>
-        <li><a ui-sref=".users" ng-if="user.canmanagechild < 2">Users</a></li>
-        <li><a ui-sref=".groups" ng-if="user.canmanagechild < 2">Groups</a></li>
-        <li><a ui-sref=".vehicles" ng-if="user.canmanagechild < 2">Vehicles</a></li>
-        <li><a ui-sref=".location">Location</a></li>
+        <li><a ui-sref=".refuel" ng-if="user.f_username === 'sa' || user.userName ==='sa'">Refuel Cost</a></li>
+        <li><a ui-sref=".users" ng-if="user.f_username === 'sa' || user.userName ==='sa'">Users</a></li>
+        <li><a ui-sref=".groups"  ng-if="user.f_username === 'sa' || user.userName ==='sa'">Groups</a></li>
+        <li><a ui-sref=".vehicles" ng-if="user.f_username === 'sa' || user.userName ==='sa'">Vehicles</a></li>
+        <!--<li><a ui-sref=".location">Location</a></li>-->
     </ul>
     <div ui-view></div>
 </div>
