--- a/public/app/admin/groups.html
+++ b/public/app/admin/groups.html
@@ -82,7 +82,7 @@
             </div>
             <div class="row center">
                 <button class="btn" ng-click="vm.save_group('edit')">Update Group</button>
-                <button class="btn" ng-click="vm.group_delete(vm.group_selected)">Delete Account</button>
+                <button class="btn" ng-click="vm.group_delete(vm.group_selected)">Delete Group</button>
             </div>
         </div>
     </div>
